Fix inconsistency between included headers and calls.

The call to OSCryptMockerLinux was guarded by a different precompiler
condition than the inclusion of its header.

BUG=661693

Review-Url: https://codereview.chromium.org/2475503002
Cr-Commit-Position: refs/heads/master@{#429377}