components/os_crypt/os_crypt_mocker.cc
@@ -7,7 +7,7 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 
 #include "components/os_crypt/os_crypt.h"
 
-#if defined(USE_LIBSECRET)
+#if defined(USE_LIBSECRET) || defined(USE_KEYRING) || defined(USE_KWALLET)
 #include "components/os_crypt/os_crypt_mocker_linux.h"
 #endif
 
